--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@ p {
     font-size: 16px;
     text-align: center;
 }
+.timer {
+    align-items: left;
+    font-size: 20px;
+}
+.leaderScore{
+    align-items: right;
+    font-size: 20px;
+}
+.startQuiz{
+    align-items: center;
+}
